# TK7_list_palindrome

./: CMakeLists.txt
gtest/: CMakeLists.txt
include/: List.hpp  ListExtented.h  ListExtented.hpp  list_declaration.h  list_declaration.hpp
samples/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  test_palindrome.cpp  test_stack.cpp
